--- a/src/main/resources/templates/locations.html
+++ b/src/main/resources/templates/locations.html
@@ -134,26 +134,30 @@
           <input type="number" id="addCurrentLoad" name="currentLoad" min="0" required>
         </div>
       </div>
-      <div class="form-row" style="display: flex; gap: 1rem;">
-        <div class="form-group" style="flex: 1;">
-          <label for="addLocationType">Location Type</label>
-          <div class="dropdown-container">
-            <div class="type-select" id="addLocationType" data-current-value="Storage">Storage</div>
-            <div class="type-dropdown">
-              <div class="dropdown-item selected" data-value="Storage">Storage</div>
-              <div class="dropdown-item" data-value="Receiving">Receiving</div>
-              <div class="dropdown-item" data-value="Shipping">Shipping</div>
-              <div class="dropdown-item" data-value="Quality">Quality</div>
+      <div class="add-row-inline">
+        <div class="field-col">
+          <div class="field-group">
+            <label for="addLocationType">Location Type</label>
+            <div class="dropdown-container">
+              <div class="type-select" id="addLocationType" data-current-value="Storage">Storage</div>
+              <div class="type-dropdown">
+                <div class="dropdown-item selected" data-value="Storage">Storage</div>
+                <div class="dropdown-item" data-value="Receiving">Receiving</div>
+                <div class="dropdown-item" data-value="Shipping">Shipping</div>
+                <div class="dropdown-item" data-value="Quality">Quality</div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="form-group" style="flex: 1;">
-          <label for="addIsActive">Status</label>
-          <div class="dropdown-container">
-            <div class="status-select" id="addIsActive" data-current-value="Active" style="color: #155724; background-color: rgba(40, 167, 69, 0.3); border-color: rgba(40, 167, 69, 0.6);">Active</div>
-            <div class="status-dropdown">
-              <div class="dropdown-item active selected" data-value="Active" data-is-active="true">Active</div>
-              <div class="dropdown-item inactive" data-value="Inactive" data-is-active="false">Inactive</div>
+        <div class="field-col">
+          <div class="field-group">
+            <label for="addIsActive">Status</label>
+            <div class="dropdown-container">
+              <div class="status-select" id="addIsActive" data-current-value="Active" style="color: #155724; background-color: rgba(40, 167, 69, 0.3); border-color: rgba(40, 167, 69, 0.6);">Active</div>
+              <div class="status-dropdown">
+                <div class="dropdown-item active selected" data-value="Active" data-is-active="true">Active</div>
+                <div class="dropdown-item inactive" data-value="Inactive" data-is-active="false">Inactive</div>
+              </div>
             </div>
           </div>
         </div>
