--- a/src/main/resources/templates/suppliers.html
+++ b/src/main/resources/templates/suppliers.html
@@ -94,11 +94,11 @@
 </div>
 
 <!-- Add Supplier Modal -->
-<div class="add-supplier-modal-overlay" id="addSupplierModalOverlay">
+<div class="add-supplier-modal-overlay" id="addSupplierModalOverlay" style="display:none;">
   <div class="add-supplier-modal">
     <div class="add-supplier-modal-header">
       <h3 class="add-supplier-modal-title">Add New Supplier</h3>
-      <button class="add-supplier-modal-close" id="closeAddSupplierModal" title="Close"></button>
+      <button class="add-supplier-modal-close" id="closeAddSupplierModal" title="Close">&times;</button>
     </div>
     <form id="addSupplierForm" class="add-supplier-form">
       <div class="form-row">
