--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -101,7 +101,7 @@
           <a th:href="@{/categories}" class="box-card h-100 d-block text-reset text-decoration-none">
             <div class="flap"></div>
             <h5 class="mb-2">Categories</h5>
-            <p class="mb-2">Create and manage categories and sub-categories.</p>
+            <p class="mb-2">Create and manage categories.</p>
             <span class="label">Category Management</span>
           </a>
         </div>
