--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -21,7 +21,7 @@
       </button>
       <div id="nav" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item" th:if="${allowSettings}">
+          <li class="nav-item">
             <a class="nav-link fw-semibold d-flex align-items-center" th:href="@{/settings}" title="Settings">
               Settings <img th:src="@{/images/settings.png}" alt="Settings" style="width: 20px; height: 20px; margin-left: 5px;">
             </a>
