--- a/src/main/resources/templates/maintenance-schedule.html
+++ b/src/main/resources/templates/maintenance-schedule.html
@@ -51,7 +51,7 @@
       <table class="table table-borderless mb-0 fixed-header-table">
         <thead>
           <tr>
-            <th class="pb-3"><span class="label">Equipment ID</span></th>
+            <th class="pb-3"><span class="label">Equipment Code</span></th>
             <th class="pb-3"><span class="label">Task Description</span></th>
             <th class="pb-3"><span class="label">Type</span></th>
             <th class="pb-3"><span class="label">Priority</span></th>
