--- a/src/main/resources/templates/unauthorized.html
+++ b/src/main/resources/templates/unauthorized.html
@@ -49,7 +49,7 @@
   </div>
 </div>
 
-<section class="container my-5">
+<section class="container my-5 auth-section">
   <div class="box-card text-center p-5">
     <div class="flap"></div>
     <h2 class="mb-3">Unauthorized Access</h2>
